[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/enemy-winged.png" type="Texture" id=1]
[ext_resource path="res://Source/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/geleia_hit.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 15, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 45, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 75, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 105, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 135, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 15, 13 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 15, 0, 15, 13 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 2.99531, 4.85433 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 7.70278, 4.89927 )

[node name="Enemy-winged" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )
speed = Vector2( 70, 300 )
gravity = 0.0
tempo_andando = 0.6
tempo_parado = 0.3

[node name="Anima" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "idle"

[node name="enemy_body" type="CollisionShape2D" parent="."]
position = Vector2( -0.0443554, 1.20505 )
shape = SubResource( 14 )

[node name="timer1" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="timer2" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0.510469, 0.612564 )
shape = SubResource( 15 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.0255227, 1.04646 )
scale = Vector2( 0.374674, 0.323628 )

[node name="sounds" type="Node" parent="."]

[node name="sound_get_hit" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 3 )
[connection signal="animation_finished" from="Anima" to="." method="_on_Anima_animation_finished"]
[connection signal="timeout" from="timer1" to="." method="_on_timer1_timeout"]
[connection signal="timeout" from="timer2" to="." method="_on_timer2_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
